--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,5 +1,5 @@
 .hero-meetup--next .hero-background {
-  background:url("/images/graphql-sydney-bg-2.jpg") no-repeat center center / cover;
+  background:url("https://res.cloudinary.com/alembic/image/upload/c_scale,e_auto_saturation,q_auto:good,w_1200/v1494823609/graphql-sydney-bg-2_wh7098.jpg") no-repeat center center / cover;
   background-color: #333;
 }
 
