--- a/lib/graphql_sydney/web/templates/page/_about.html.eex
+++ b/lib/graphql_sydney/web/templates/page/_about.html.eex
@@ -22,7 +22,7 @@
       allowtransparency="true"
       class="twitter-follow-button twitter-follow-button-rendered"
       title="Follow GraphQL Sydney on Twitter"
-      src="http://platform.twitter.com/widgets/follow_button.a0ec3119d8db2bc5422f2144c89ad7a9.en.html#dnt=true&amp;id=twitter-widget-0&amp;lang=en&amp;screen_name=graphqlsydney&amp;show_count=true&amp;show_screen_name=true&amp;size=l&amp;time=1487642361501"
+      src="https://platform.twitter.com/widgets/follow_button.a0ec3119d8db2bc5422f2144c89ad7a9.en.html#dnt=true&amp;id=twitter-widget-0&amp;lang=en&amp;screen_name=graphqlsydney&amp;show_count=true&amp;show_screen_name=true&amp;size=l&amp;time=1487642361501"
       style="height: 28px; width: 270px"
       data-screen-name="graphqlsydney">
     </iframe>
@@ -40,6 +40,6 @@
   </section>
 
   <section class="logo row">
-    <img src="/images/graphql-sydney-logo.svg" alt="GraphQL Sydney Logo">
+    <img src="https://res.cloudinary.com/alembic/image/upload/c_scale,w_200/v1494823606/graphql-sydney-logo_nfzerw.svg" alt="GraphQL Sydney Logo" width="200px" height="200px">
   </section>
 </article>
