--- a/lib/graphql_sydney/web/templates/page/_about.html.eex
+++ b/lib/graphql_sydney/web/templates/page/_about.html.eex
@@ -34,6 +34,7 @@
         link "Join the Meetup Group",
           to: "https://www.meetup.com/GraphQL-Sydney/join",
           target: "_blank",
+          rel: "noopener",
           class: "btn btn-lg btn-block btn-primary mv-1"
       %>
     </div>
