--- a/lib/graphql_sydney/web/templates/page/_talk.html.eex
+++ b/lib/graphql_sydney/web/templates/page/_talk.html.eex
@@ -17,10 +17,10 @@
       <div class="summary">
         <p>
           <%= if @talk.slide_url do %>
-            <%= link "Slides", to: @talk.slide_url, target: "_blank" %>
+            <%= link "Slides", to: @talk.slide_url, target: "_blank", rel: "noopener" %>
           <%= end %>
           <%= if @talk.video_url do %>
-            <%= link "Video", to: @talk.video_url, target: "_blank" %>
+            <%= link "Video", to: @talk.video_url, target: "_blank", rel: "noopener" %>
           <%= end %>
         </p>
       </div>
