--- a/lib/graphql_sydney/web/templates/page/meetup.html.eex
+++ b/lib/graphql_sydney/web/templates/page/meetup.html.eex
@@ -1,5 +1,5 @@
 <div class="container-sm">
   <div class="tile ph-1 pv-1">
-    <%= render "_meetup.html", meetup: @meetup, past: true %>
+    <%= render "_meetup.html", meetup: @meetup, past: @meetup.date < Timex.today %>
   </div>
 </div>
