--- a/lib/graphql_sydney/web/templates/page/_hero_meetup.html.eex
+++ b/lib/graphql_sydney/web/templates/page/_hero_meetup.html.eex
@@ -9,7 +9,7 @@
         <%= link @meetup.title, to: page_path(@conn, :meetup, @meetup.slug), style: "color: white;" %>
       </h1>
       <h4 class="subtitle">
-        brought to you with ❤️ by <a href="http://alembic.com.au">Alembic</a> and <a href="http://www.apollodata.com/">Apollo</a>
+        brought to you with ❤️ by <a href="https://alembic.com.au">Alembic</a> and <a href="https://www.domain.com.au/">Domain</a>
       </h4>
       <p class="byline">
         <strong>
