Added link to SydJS in code of conduct

--- a/lib/graphql_sydney/web/templates/page/_code_of_conduct.html.eex
+++ b/lib/graphql_sydney/web/templates/page/_code_of_conduct.html.eex
@@ -53,11 +53,15 @@
   </p>
 
   <p>
-    If you witness or are a victim of harassment or non-exclusion please contact the event organisers, who will introduce themselves at the beginning of each meetup. Our strong preference is that we address any issues as and when they happen. However, if you do not feel safe as and when an issue arises, you may contact an organiser. Phone numbers will be provided.
+    If you witness or are a victim of harassment or non-exclusion please contact
+    the event organisers, who will introduce themselves at the beginning of each
+    meetup. Our strong preference is that we address any issues as and when they
+    happen. However, if you do not feel safe as and when an issue arises, you
+    may contact an organiser. Phone numbers will be provided.
   </p>
 
   <p>
-    Thanks to SydJS for inspiring this Code of Conduct.
+    Thanks to <a href="https://www.sydjs.com/">SydJS</a> for inspiring this Code of Conduct.
   </p>
 
   <section class="logo row">
