--- a/lib/graphql_sydney/web/templates/layout/app.html.eex
+++ b/lib/graphql_sydney/web/templates/layout/app.html.eex
@@ -18,7 +18,7 @@
     </script>
 
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
-    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
   </head>
 
   <body class="sitesection-<%= @page_name %>">
